# belajar-module-python

./: LICENSE  README.md  pyproject.toml
src/terbilang/: __init__.py  konversi.py
tests/: test_terbilang.py
