[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "terbilang"
version = "0.1.0"
description = "Konversi angka menjadi teks terbilang dalam Bahasa Indonesia"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "Endy Muhardin", email = "endy@muhardin.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Linguistic",
    "Natural Language :: Indonesian",
]
keywords = ["terbilang", "angka", "indonesia", "konversi"]

[project.urls]
Homepage = "https://github.com/endymuhardin/terbilang"
Repository = "https://github.com/endymuhardin/terbilang"
Issues = "https://github.com/endymuhardin/terbilang/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
